--- a/Udacity/Course 6 - Neural Networks/All notebooks for Course 6/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/Udacity/Course 6 - Neural Networks/All notebooks for Course 6/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -251,7 +251,7 @@
    "source": [
     "If you did this correctly, you should see the output `tensor([[ 0.3171]])`.\n",
     "\n",
-    "The number of hidden units is a parameter of the network, often called a **hyperparameter** to differentiate it from the weights and biases parameters. As you'll see later when we discuss training a neural network, the more hidden units a network has, and the more layers, the better able it is to learn from data and make accurate predictions."
+    "The number of hidden units a parameter of the network, often called a **hyperparameter** to differentiate it from the weights and biases parameters. As you'll see later when we discuss training a neural network, the more hidden units a network has, and the more layers, the better able it is to learn from data and make accurate predictions."
    ]
   },
   {
@@ -270,7 +270,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.set_printoptions(precision=8)\n",
     "a = np.random.rand(4,3)\n",
     "a"
    ]
@@ -281,7 +280,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.set_printoptions(precision=8)\n",
     "b = torch.from_numpy(a)\n",
     "b"
    ]
@@ -339,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
