--- a/Udacity/Course 6 - Neural Networks/All notebooks for Course 6/Part 1 - Tensors in PyTorch (Solution).ipynb
+++ b/Udacity/Course 6 - Neural Networks/All notebooks for Course 6/Part 1 - Tensors in PyTorch (Solution).ipynb
@@ -93,7 +93,7 @@
     "### Generate some data\n",
     "torch.manual_seed(7) # Set the random seed so things are predictable\n",
     "\n",
-    "# Features are 5 random normal variables\n",
+    "# Features are 3 random normal variables\n",
     "features = torch.randn((1, 5))\n",
     "# True weights for our data, random normal variables again\n",
     "weights = torch.randn_like(features)\n",
@@ -150,7 +150,7 @@
     "RuntimeError: size mismatch, m1: [1 x 5], m2: [1 x 5] at /Users/soumith/minicondabuild3/conda-bld/pytorch_1524590658547/work/aten/src/TH/generic/THTensorMath.c:2033\n",
     "```\n",
     "\n",
-    "As you're building neural networks in any framework, you'll see this often. Really often. What's happening here is our tensors aren't the correct shapes to perform a matrix multiplication. Remember that for matrix multiplications, the number of columns in the first tensor must equal to the number of rows in the second tensor. Both `features` and `weights` have the same shape, `(1, 5)`. This means we need to change the shape of `weights` to get the matrix multiplication to work.\n",
+    "As you're building neural networks in any framework, you'll see this often. Really often. What's happening here is our tensors aren't the correct shapes to perform a matrix multiplication. Remember that for matrix multiplications, the number of columns in the first tensor must equal to the number of rows in the second column. Both `features` and `weights` have the same shape, `(1, 5)`. This means we need to change the shape of `weights` to get the matrix multiplication to work.\n",
     "\n",
     "**Note:** To see the shape of a tensor called `tensor`, use `tensor.shape`. If you're building neural networks, you'll be using this method often.\n",
     "\n",
@@ -252,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3171]])\n"
+      "tensor([[0.3171]])\n"
      ]
     }
    ],
@@ -284,19 +284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.76433004, 0.88218111, 0.43851091],\n",
+       "       [0.77769891, 0.47783797, 0.01467358],\n",
+       "       [0.64635295, 0.584131  , 0.75222744],\n",
+       "       [0.34437755, 0.79121803, 0.29098265]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,21 +309,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.3367  0.5953  0.6543\n",
-       " 0.8653  0.5995  0.2804\n",
-       " 0.4841  0.9836  0.3388\n",
-       " 0.2559  0.5108  0.3999\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[0.7643, 0.8822, 0.4385],\n",
+       "        [0.7777, 0.4778, 0.0147],\n",
+       "        [0.6464, 0.5841, 0.7522],\n",
+       "        [0.3444, 0.7912, 0.2910]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,19 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.76433004, 0.88218111, 0.43851091],\n",
+       "       [0.77769891, 0.47783797, 0.01467358],\n",
+       "       [0.64635295, 0.584131  , 0.75222744],\n",
+       "       [0.34437755, 0.79121803, 0.29098265]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,21 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.6734  1.1906  1.3087\n",
-       " 1.7306  1.1989  0.5609\n",
-       " 0.9682  1.9672  0.6777\n",
-       " 0.5118  1.0216  0.7997\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[1.5287, 1.7644, 0.8770],\n",
+       "        [1.5554, 0.9557, 0.0293],\n",
+       "        [1.2927, 1.1683, 1.5045],\n",
+       "        [0.6888, 1.5824, 0.5820]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,19 +387,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.67338991,  1.19063124,  1.30867888],\n",
-       "       [ 1.73062448,  1.19890728,  0.56087946],\n",
-       "       [ 0.96818606,  1.96715243,  0.67768568],\n",
-       "       [ 0.51182782,  1.02163565,  0.79972807]])"
+       "array([[1.52866007, 1.76436222, 0.87702181],\n",
+       "       [1.55539781, 0.95567594, 0.02934716],\n",
+       "       [1.2927059 , 1.168262  , 1.50445487],\n",
+       "       [0.68875509, 1.58243606, 0.5819653 ]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
