--- a/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,12 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "# First, import PyTorch\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "print('hello')"
    ]
   },
   {
@@ -75,7 +85,7 @@
    "outputs": [],
    "source": [
     "def activation(x):\n",
-    "    \"\"\" Sigmoid activation function \n",
+    "    \"\"\" Sigmoid activation function - probability of 0 to 1\n",
     "    \n",
     "        Arguments\n",
     "        ---------\n",
@@ -94,10 +104,18 @@
     "torch.manual_seed(7) # Set the random seed so things are predictable\n",
     "\n",
     "# Features are 3 random normal variables\n",
+    "# randn will create a tensor matrix of normal variables (samples from a normal distribution)\n",
+    "# give it a tuple of the size that you want. In this case 2D tensor of size 1 row and 5 columns\n",
     "features = torch.randn((1, 5))\n",
+    "\n",
+    "\n",
     "# True weights for our data, random normal variables again\n",
+    "# create another matrix of random normal variables - similar in shape as the other tensor that it's provided (1, 5)\n",
     "weights = torch.randn_like(features)\n",
+    "\n",
+    "\n",
     "# and a true bias term\n",
+    "# create a 2D bias that is a random normal variable of 1 row 1 col\n",
     "bias = torch.randn((1, 1))"
    ]
   },
@@ -119,11 +137,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features: tensor([[-0.1468,  0.7861,  0.9468, -1.1143,  1.6908]]). shape: torch.Size([1, 5])\n",
+      "weights: tensor([[-0.8948, -0.3556,  1.2324,  0.1382, -1.6822]]). shape: torch.Size([1, 5])\n",
+      "ten: tensor([[ 0.1314, -0.2796,  1.1668, -0.1540, -2.8442]])\n",
+      "y: tensor([[0.1595]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors"
+    "## Calculate the output of this network using the weights and bias tensors\n",
+    "\n",
+    "\n",
+    "ten = features * weights\n",
+    "print(f'features: {features}. shape: {features.shape}')\n",
+    "print(f'weights: {weights}. shape: {weights.shape}')\n",
+    "print(f'ten: {ten}')\n",
+    "\n",
+    "# y = activation( (features*weights).sum() + bias)\n",
+    "y = activation(torch.sum(features * weights) + bias)\n",
+    "print(f'y: {y}')"
    ]
   },
   {
@@ -162,11 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9796]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "\n",
+    "\n",
+    "torch.mm(features, weights.view(5, 1))"
    ]
   },
   {
@@ -325,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_env",
    "language": "python",
    "name": "python3"
   },
@@ -339,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
