--- a/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -201,25 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.9796]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Calculate the output of this network using matrix multiplication\n",
     "\n",
     "\n",
-    "torch.mm(features, weights.view(5, 1))"
+    "y = activation(torch.mm(features, weights.view(5, 1)) + bias)"
    ]
   },
   {
@@ -268,16 +257,21 @@
     "features = torch.randn((1, 3))\n",
     "\n",
     "# Define the size of each layer in our network\n",
+    "\n",
+    "# shape[rows, cols] --> it's basically saying use the # columns specified for features\n",
     "n_input = features.shape[1]     # Number of input units, must match number of input features\n",
+    "\n",
+    "\n",
     "n_hidden = 2                    # Number of hidden units \n",
     "n_output = 1                    # Number of output units\n",
     "\n",
-    "# Weights for inputs to hidden layer\n",
+    "# Weights to the hidden layer (3, 2)\n",
     "W1 = torch.randn(n_input, n_hidden)\n",
-    "# Weights for hidden layer to output layer\n",
+    "\n",
+    "# Weights to the output layer (2, 1)\n",
     "W2 = torch.randn(n_hidden, n_output)\n",
     "\n",
-    "# and bias terms for hidden and output layers\n",
+    "# bias terms for hidden and output layers\n",
     "B1 = torch.randn((1, n_hidden))\n",
     "B2 = torch.randn((1, n_output))"
    ]
@@ -291,11 +285,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.6813, 0.4355]])\n",
+      "tensor([[0.3171]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "## Your solution here\n",
+    "\n",
+    "# this will produce 2 outputs, given there are 2 nodes in the hidden layer\n",
+    "hidden_values = activation(torch.mm(features, W1) + B1)\n",
+    "print(hidden_values)\n",
+    "\n",
+    "# the values for each node in the hidden layer becomes the input (X) for the next calculation\n",
+    "output = activation(torch.mm(hidden_values, W2) + B2)\n",
+    "print(output)"
    ]
   },
   {
@@ -318,9 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.23285434, 0.86544784, 0.34455466],\n",
+       "       [0.1818022 , 0.47440027, 0.52370678],\n",
+       "       [0.81553714, 0.678637  , 0.03611203],\n",
+       "       [0.28238866, 0.04069708, 0.53533118]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.set_printoptions(precision=8)\n",
@@ -330,9 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.23285434, 0.86544784, 0.34455466],\n",
+       "        [0.18180220, 0.47440027, 0.52370678],\n",
+       "        [0.81553714, 0.67863700, 0.03611203],\n",
+       "        [0.28238866, 0.04069708, 0.53533118]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.set_printoptions(precision=8)\n",
     "b = torch.from_numpy(a)\n",
@@ -341,9 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.23285434, 0.86544784, 0.34455466],\n",
+       "       [0.1818022 , 0.47440027, 0.52370678],\n",
+       "       [0.81553714, 0.678637  , 0.03611203],\n",
+       "       [0.28238866, 0.04069708, 0.53533118]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
    ]
@@ -357,9 +410,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.46570869, 1.73089568, 0.68910933],\n",
+       "        [0.36360439, 0.94880054, 1.04741356],\n",
+       "        [1.63107428, 1.35727400, 0.07222405],\n",
+       "        [0.56477732, 0.08139416, 1.07066237]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiply PyTorch Tensor by 2, in place\n",
     "b.mul_(2)"
@@ -367,9 +434,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.46570869, 1.73089568, 0.68910933],\n",
+       "       [0.36360439, 0.94880054, 1.04741356],\n",
+       "       [1.63107428, 1.357274  , 0.07222405],\n",
+       "       [0.56477732, 0.08139416, 1.07066237]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Numpy array matches new values from Tensor\n",
     "a"
